# drone_blibli_aruco

./: debug_topics.sh  transport_params.yaml
src/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp  CMakeLists.txt  calibrate_camera.sh
src/aruco_tracker/cfg/: logitech_c270_calibration.yaml  params_real_drone.yaml
src/aruco_tracker/include/: drift_correction.hpp  drift_correction_new.hpp  simple_precision_land.hpp
src/aruco_tracker/launch/: aruco_drift_correction.launch.xml  aruco_tracker.launch.py  aruco_tracker_real_drone.launch.py  precision_land.launch.py
src/aruco_tracker/md_files/: ARCHITECTURE.md  ARUCO_SETUP_SUMMARY.md  QUICKSTART.md  SETUP_REAL_DRONE.md
src/aruco_tracker/src/: drift_correction.cpp  simple_precision_land.cpp  vision_position_bridge.cpp
src/precision_land/: PrecisionLand.cpp  PrecisionLand.hpp
src/precision_land/config/: fastdds_configuration.xml
src/precision_land/launch/: precision_land.launch.py
src/px4-ros2-interface-lib/px4_ros2_cpp/: CMakeLists.txt
src/vision_opencv/image_geometry/: CMakeLists.txt
